--- a/frontend/src/app/components/user-profile/profile/profile.component.css
+++ b/frontend/src/app/components/user-profile/profile/profile.component.css
@@ -37,7 +37,7 @@
     margin-bottom: 4rem;
 }
 
-.avatar {
+.user .avatar {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,19 +63,25 @@
     font-size: medium;
 }
 
+.header-down{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.header-down .button{
+    flex:1;
+}
 
+.header-down .header-left{
+    display: flex;
+    flex-direction: column;
+}
 .header-down h3{
     margin: 1em 0 0 0.3em;
 }
-.header-down-fav h3{
-    margin: 1em 0 0.5em 0.3em;
-}
-
-.user-profile{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 5px;
+.header-down span{
+    margin: 0 0 0 0.3em;
+    font-weight: 400;
 }
 
 .user-name{
@@ -94,7 +100,7 @@
     width: 100%;
 }
 
-.game{
+.data{
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -126,6 +132,16 @@
     font-size: medium;
     margin-bottom: 0.3rem;
 } 
+
+.fav-user-name{
+    margin-top: auto;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: medium;
+    margin-bottom: 0.3rem;
+}
 .no-result{
     padding: 10px 0 10px 25px;
 }
