--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,14 +2,16 @@
   <div class="navbar">
     <app-navbar></app-navbar>
   </div>
-  <div class="content">
+  <div class="content-main">
     <router-outlet></router-outlet>
     <p-confirmDialog defaultFocus="reject"></p-confirmDialog>
   </div>
   <p-toast position="top-right"></p-toast> 
-  <footer>
-    © Natalia Kolbusz
-  </footer>
+  <div class="footer">
+    <footer>
+      © Natalia Kolbusz
+    </footer>
+  </div>
 </div>
 
 
