--- a/frontend/src/app/components/userRequest/create-user-request/create-user-request.component.css
+++ b/frontend/src/app/components/userRequest/create-user-request/create-user-request.component.css
@@ -7,55 +7,63 @@
     min-height: 60%;
     background-color:#ffffff;
     border: 1.5px solid #c7c7c7;
-    padding: 30px;
     border-radius: 10px;
     box-shadow: 0 40px 40px 0 rgba(0, 0, 0, 0.2);
     overflow: hidden; 
     display: flex;
     flex-direction: column;
 }
-
+.header{
+    padding: 50px 30px 0 30px;
+}
 .form{
     flex: 1;
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .form::before{
     position: absolute;
     content: "";
-    width: 580px;
-    height: 640px;
+    width: 480px;
+    height: 540px;
     background-color: rgb(243, 229, 222);
     transform: rotate(45deg);
-    left: -200px;
-    bottom: 10px;
+    left: -180px;
+    bottom: 60px;
     z-index: -1;
     border-radius: 30px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.082);
 }
 
 p{
-    margin-top: 40px;
     text-align: center;
     font-size: large;
     font-weight: bolder;
 }
 
 .content{
-    flex: 1;
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5rem;
+    width: 60%;
 }
 .content .label{
-
+    width: 100%;
+}
+.content .label label,input,textarea{
+    width: 100%;
+    margin-bottom: 5px;
 }
 
+
 .container button[type="submit"] {
+    width: 100%;
     padding: 10px;
     background-color: #EEA47F;;
     color: white;
@@ -63,10 +71,15 @@ p{
     border-radius: 5px;
     cursor: pointer;
     font-size: 15px;
+    justify-content: center;
 }
 
 .container button[type="submit"]:hover {
     background-color: #f19364;
+}
+
+::ng-deep .p-button-label{
+    flex: none;
 }
 
 .container .error-messages small{
@@ -79,10 +92,40 @@ p{
     .container{
         width: 60%; 
     }    
+    .content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 5rem;
+        width: 80%;
+    }
 }
 
 @media only screen and (max-width: 600px) {
     .container{
         width: 80%; 
-    }    
+        height: 70%;
+    }  
+    p{
+        font-size: small;
+    }  
+    .header{
+        padding: 20px 20px 0 20px;
+    }
+    .content{
+        width: 80%;
+        font-size: small;
+        margin-bottom: 4rem;
+    }
+    .content .label input,textarea{
+        font-size: small;
+    }
+    .container button[type="submit"]{
+        font-size: small;
+    }
+    ::ng-deep .container .pi{
+        font-size: small;
+    }
+        
 }
