--- a/frontend/src/app/components/user-profile/user-favourite-game-list/user-favourite-game-list.component.html
+++ b/frontend/src/app/components/user-profile/user-favourite-game-list/user-favourite-game-list.component.html
@@ -6,5 +6,6 @@
       [userId]="userId"
       [toggleButtonFn]="toogleButton"
       [buttonName]="'User\'s all games'"
+      [favView]="true"
 > 
 </app-generic-user-game-list>
