--- a/frontend/src/app/components/userRequest/create-user-request/create-user-request.component.html
+++ b/frontend/src/app/components/userRequest/create-user-request/create-user-request.component.html
@@ -1,6 +1,6 @@
 <div class="container">  
     <div class="header">
-        <p>Don't see a board game that interests you on the list? Send us a request and we will try to add it.<br>
+        <p>Don't see a board game that interests you?<br> Add board game <span id="link" [routerLink]="['/sendAddBoardGameRequest']">here</span> and we will try to add it.<br><br>
             If you have any other questions don't be afraid to ask. We are here for you.
         </p>
     </div>
