add add board gam,e request and styling, show sended add board game request and styling

--- a/frontend/src/app/components/admin/board-game-settings/board-game-settings.component.css
+++ b/frontend/src/app/components/admin/board-game-settings/board-game-settings.component.css
@@ -13,6 +13,13 @@
 form div{
     margin-bottom: 10px;
 }
+
+.error-messages small{
+    display: block;
+    color: #ff5252; 
+    margin: 0 0 5px 0;
+} 
+
 input{
     margin-top: 5px;
 }
