--- a/frontend/src/app/components/home/home-page.component.html
+++ b/frontend/src/app/components/home/home-page.component.html
@@ -7,7 +7,7 @@
       <p>
         Browse through your favourite games, save them and share your experience with other users.
       </p>
-      <button pButton label="Search board games" [routerLink]="['/games']"></button>
+      <button pButton label="Search board games" [routerLink]="['/games']" style="text-align: center;"></button>
     </div>
     <ng-template #notLoggedIn>
       <div class="not-loggedin">
