--- a/frontend/src/app/components/boardGame/game-detail/game-detail.component.html
+++ b/frontend/src/app/components/boardGame/game-detail/game-detail.component.html
@@ -14,7 +14,6 @@
                         <div *ngIf="!isFavourite" class="pi pi-heart-fill nofav"></div>
                         <div *ngIf="isFavourite" class="pi pi-heart-fill fav"></div> 
                     </div>
-                    <!-- <div class="game-rating"><i class="pi pi-star-fill"></i> Rating: <span class="rating-value">{{gameDetails.rating === 0 ? '-' : gameDetails.rating}}</span></div> -->
                 </div>
                 <div class="game-details">
                     <div class="game-players"><span class="header">Players: </span><span class="desc">{{gameDetails.players}}</span> </div>
@@ -92,6 +91,9 @@
                         <div class="error-messages" *ngIf="commentControl.invalid && (commentControl.dirty || commentControl.touched)">
                             <small *ngIf="commentControl.hasError('maxlength')">
                                 Comment must be at most 1000 characters.
+                            </small>
+                            <small *ngIf="commentControl.hasError('required')">
+                                Comment can not be empty.
                             </small>
                         </div>
                         <div class="add-comment-button">
